adding logback - does not work yet